--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
-    <!-- Don't forget to link your CSS file! -->
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
@@ -26,7 +26,9 @@
     </section>
 
     <section id="details">
-      <div>
+      <footer>
+      <div class="footer-section">
+      <div class="footer-column">
         <h3>Contact</h3>
         <p>
           <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
@@ -35,7 +37,7 @@
         </p>
       </div>
       
-      <div>
+      <div class="footer-column">
         <h3>Correspondence</h3>
         <p>
           Exceptional Realty<br>
@@ -44,7 +46,7 @@
         </p>
       </div>
 
-      <div>
+      <div class="footer-column">
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
@@ -53,14 +55,16 @@
         </p>
       </div>
 
-      <div>
+      <div class="footer-column">
         <h3>Follow</h3>
         <p>
           <a href="#" target="_blank">YouTube</a><br>
           <a href="#" target="_blank">Facebook</a><br>
           <a href="#" target="_blank">Twitter</a>
         </p>
+        </div>
       </div>
     </section>
+  </footer>
   </body>
 </html>
